--- a/Pipfile
+++ b/Pipfile
@@ -3,16 +3,18 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+
 [dev-packages]
-pylint = "*"
-pytest = "*"
-pytest-mock = "*"
-pre-commit = "*"
+pytest = "~=6.0.1"
+pytest-mock = "~=3.2.0"
+requests-mock = "~=1.8.0"
+pre-commit = "~=2.7.1"
+aws-sam-cli = "~=1.37.0"
+awscli = "~=1.22.35"
 
 [packages]
-aws-sam-cli = "*"
-boto3 = "*"
-botocore = "*"
+crhelper = "~=2.0.6"
+synapseclient = "~=2.2.0"
 
 [requires]
 python_version = "3.6"
