--- a/template.yaml
+++ b/template.yaml
@@ -24,6 +24,12 @@ Parameters:
     AllowedPattern: '^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
     ConstraintDescription: 'Must be an acceptable email address syntax(i.e. joe.smith@sagebase.org)'
     Default: 'it@sagebase.org'
+  CfnExportLambdaExecutionRole:
+    Description: 'The cloudformation export value of the lambda execution role'
+    Type: String
+  CfnExportLambdaServiceRoleArn:
+    Description: 'The cloudformation export value of the lambda service role ARN'
+    Type: String
 
 Globals:
   Function:
@@ -36,7 +42,7 @@ Resources:
       CodeUri: ssm_param/
       Handler: app.handler
       Runtime: python3.9
-      Role: !ImportValue us-east-1-bootstrap-SsmParamLambdaExecutionRoleArn
+      Role: !Ref CfnExportLambdaExecutionRole
       Tags:
         Department: !Ref Department
         Project: !Ref Project
@@ -54,7 +60,7 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Ref SsmParamFunction
       Principal: !Ref 'AWS::AccountId'
-      SourceArn: !ImportValue us-east-1-bootstrap-CfServiceRoleArn
+      SourceArn: !Ref CfnExportLambdaServiceRoleArn
 
 Outputs:
   SsmParamFunctionName:
