--- a/template.yaml
+++ b/template.yaml
@@ -24,11 +24,11 @@ Parameters:
     AllowedPattern: '^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
     ConstraintDescription: 'Must be an acceptable email address syntax(i.e. joe.smith@sagebase.org)'
     Default: 'it@sagebase.org'
-  CfnExportLambdaExecutionRole:
-    Description: 'The cloudformation export value of the lambda execution role'
+  CfnExportLambdaExecutionRoleArn:
+    Description: 'The ARN of the role used to execute this lambda'
     Type: String
-  CfnExportLambdaServiceRole:
-    Description: 'The cloudformation export value of the lambda service role'
+  CfnExportLambdaServiceRoleArn:
+    Description: 'The ARN of the role used to invoke this lambda'
     Type: String
 
 Globals:
@@ -42,7 +42,7 @@ Resources:
       CodeUri: ssm_param/
       Handler: app.handler
       Runtime: python3.9
-      Role: !Ref CfnExportLambdaExecutionRole
+      Role: !Ref CfnExportLambdaExecutionRoleArn
       Tags:
         Department: !Ref Department
         Project: !Ref Project
@@ -60,7 +60,7 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Ref SsmParamFunction
       Principal: !Ref 'AWS::AccountId'
-      SourceArn: !Ref CfnExportLambdaServiceRole
+      SourceArn: !Ref CfnExportLambdaServiceRoleArn
 
 Outputs:
   SsmParamFunctionName:
