--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,11 @@ requests-mock = "~=1.8"
 pre-commit = "~=2.20"
 aws-sam-cli = "~=1.55"
 awscli = "~=1.25"
+coverage = "~=7.0"
 
 [packages]
-crhelper = "~=2.0.11"
-synapseclient = "~=2.6.0"
+crhelper = "~=2.0"
+synapseclient = "~=2.6"
 
 [requires]
 python_version = "3.9"
